# energytrackr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  Dockerfile  README.md  columns.yml  conf.json  config.schema.json  config_model.py  config_store.py  discovered_tests.txt  energy-measurement.conf  energy-measurements.conf  laptop_conf.json  main.py  makefile  measure_energy.sh  merger.py  plot.py  plot.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server_conf.json  server_conf_bfs.json  server_conf_core.json  server_conf_ffmpeg.json  server_conf_openssl.json  server_conf_scrcpy.conf  server_conf_scrcpy.json  server_results.csv  server_results5.csv  server_results6.csv  server_results_2.csv  server_results_3.csv  server_results_4.csv  setup.sh  system_setup.sh  (+1 more)
.github/workflows/: check.yml  pylint.yml  pyright.yml  ruff.yml  test.yml
docs/source/: architecture.md  class.md  cli.md  conf.py  docs_guide.md  flow.md  index.md  installation.md  requirements.txt  stages.md  usage.md
docs/source/api/: config.rst  energytrackr.commands.rst  energytrackr.config.rst  energytrackr.pipeline.core_stages.rst  energytrackr.pipeline.custom_stages.rst  energytrackr.pipeline.rst  energytrackr.plot.builtin_data_transforms.rst  energytrackr.plot.builtin_page_sections.rst  energytrackr.plot.builtin_plot_objects.rst  energytrackr.plot.builtin_plots.rst  energytrackr.plot.rst  energytrackr.rst  energytrackr.utils.rst  modules.rst  pipeline.rst
projects/docx4j/: laptop_conf_docx4j.json
projects/fiber/energy_measurements/: energy_results_20250508_161147.csv
projects/fxgl/: laptop_conf_fxgl.json
projects/go/fiber/: laptop_conf_fiber.json
projects/jsoup/: energy_usage.csv  laptop_conf.yml  laptop_conf_jsoup.json  server_conf_jsoup.json  sorted_5.plot.html
projects/jsoup/energy_measurements/: energy_results_20250407_154110.csv
projects/libressl-portable/: laptop_conf_portable.json  server_conf_portable.json
projects/mpv/: energy_results.csv
projects/portable/: energy_usage.csv
projects/signalfx-java/: energy_usage.csv  laptop_conf_signal-fx-java.json
projects/signalfx-java/energy_measurements/: energy_results_20250405_185910.csv
projects/supercsv/: laptop_conf_supercsv.json
projects/xz/: energy_usage.csv
src/: main.py  utils.py
src/commands/: dispatcher.py
src/config/: config_model.py  config_store.py  loader.py
src/energytrackr/: __init__.py  main.py
src/energytrackr/commands/: __init__.py  args_parser.py  dispatcher.py
src/energytrackr/config/: config_model.py  config_store.py  loader.py
src/energytrackr/pipeline/: __init__.py  context.py  pipeline.py  stage_interface.py
src/energytrackr/pipeline/core_stages/: __init__.py  build_stage.py  checkout_stage.py  copy_directory_stage.py  filter_and_regression_stage.py  measure_stage.py  post_test_stage.py  pre_build_stage.py  set_directory_stage.py  stability_check_stage.py  temperature_check_stage.py  verify_perf_stage.py
src/energytrackr/pipeline/custom_stages/: __init__.py  java_setup_stage.py
src/energytrackr/pipeline/strategies/: naive.py  pruned_binary_segmentation.py  pruned_endpoint_segmentation.py  strategy_interface.py
src/energytrackr/plot/: __init__.py  builtin_models.py  config.py  data.py  main.py  page.py  pipeline.py  plot.py
src/energytrackr/plot/builtin_data_transforms/: commit_details.py  commit_stats.py  compute_distribution.py  detect_changes.py  filter_outliers.py  load_csv.py
src/energytrackr/plot/builtin_page_sections/: __init__.py  base.py  change_table.py  level_legend.py  plot_embed.py  summary_box.py
src/energytrackr/plot/builtin_page_sections/static/css/: change_table.css
src/energytrackr/plot/builtin_page_sections/templates/: base.html  change_table.html  level_legend.html  summary_box.html
src/energytrackr/plot/builtin_plot_objects/: __init__.py  bollinger_bands.py  candlestick.py  change_events.py  distribution_scatter.py  dynamic_ticks.py  ema_line.py  error_bars.py  legend_policy.py  macd_line.py  median_line.py  plot.py  series_line.py  sma_line.py
src/energytrackr/plot/builtin_plots/: __init__.py  base.py  bootstrap_comparison.py  boxplot_comparison.py  change_point_comparison.py  cusum_comparison.py  ecdf_comparison.py  evolution_plot.py  mixins.py  plot_interface.py  qq_comparison.py  registry.py  utils.py  violin_comparison.py
src/energytrackr/plot/builtin_plots/static/: bootstrap_comparison.js  boxplot_comparison.js  ecdf_comparison.js  evolution_plot.js  qq_comparison.js  violin_comparison.js
src/energytrackr/plot/core/: context.py  interfaces.py  loader.py
src/energytrackr/plot/templates/: report_template.html
src/energytrackr/utils/: __init__.py  args_parser.py  exceptions.py  git_utils.py  logger.py  sort.py  utils.py
src/pipeline/: pipeline.py  stage_interface.py
src/pipeline/core_stages/: build_stage.py  checkout_stage.py  copy_directory_stage.py  filter_and_regression_stage.py  filter_commits.py  measure_stage.py  post_test_stage.py  pre_build_stage.py  prepare_batch_stage.py  set_directory_stage.py  stability_check_stage.py  temperature_check_stage.py  test_stage.py  verify_perf_stage.py
src/pipeline/custom_stages/: java_setup_stage.py
src/plot/: data.py  main.py  page.py  plot.py
src/plot/templates/: report_template.html
src/utils/: args_parser.py  exceptions.py  git.py  logger.py  sort.py  utils.py
tests/: test_core.py
tests/config/: sample_conf.json  test_config.py
tests/pipeline/: test_pipeline.py
tests/pipeline/core_stages/: test_build_stage.py  test_checkout_stage.py  test_copy_directory_stage.py  test_measure_stage.py  test_post_test_stage.py  test_set_directory_stage.py  test_temperature_check_stage.py  test_verify_perf_stage.py
tests/pipeline/custom_stages/: test_java_setup_stage.py
tests/plot/: test_plot.py
tests/utils/: test_sort.py  test_utils.py
