[project]
name = "energy_analyzer"
version = "0.1.0"
description = "Pipeline for analyzing energy data"

dependencies = []
requires-python = ">=3.13,<3.14"
readme = "README.md"

[tool.ruff]
line-length = 127
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = [
  "D",  # pydocstyle (Enforces docstrings)
  "E",  # pycodestyle (Style guide enforcement)
  "F",  # Pyflakes (Error detection)
  "UP",  # pyupgrade (Upgrades old Python syntax)
  "ANN",  # flake8-annotations (Ensure function annotations)
  "ARG",  # flake8-unused-arguments (Detect unused arguments)
  "B",  # flake8-bugbear (Detects bugs and design issues)
  "T20",  # flake8-print (Detect print statements)
  "SIM",  # flake8-simplify (Simplify redundant code)
  "I",  # isort (Sort imports)
  "PERF",  # perflint (Performance optimizations)
  "C90",  # mccabe (Complexity checker)
  "ERA",  # eradicate (Remove commented-out code)
  "N",  # pep8-naming (Naming conventions)
  "PL",  # pylint (More extensive linting)
  "TRY",  # flake8-tryceratops (Improve try-except blocks)
  "Q",  # flake8-quotes (Quote consistency)
  "COM",  # flake8-commas (Enforce trailing commas)
  "RUF",  # Ruff-specific checks
]

exclude = ["tests/**", ".venv/**"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
warn_no_return = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_any_generics = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]